--- a/First Project in AWS SM(git).ipynb
+++ b/First Project in AWS SM(git).ipynb
@@ -1300,7 +1300,7 @@
    "id": "7dc70e2c",
    "metadata": {},
    "source": [
-    "## Deleting The Endpoints (deleting evering from s3 bucket)"
+    "## Deleting The Endpoints (deleting everything from s3 bucket)"
    ]
   },
   {
